vlib/v/parser/tests/generic_return_invalid_err.vv
module main

fn foo[T](v T) [T] {
	return v
}

fn main() {
	println(foo[string]('Hello World'))
}
